--- a/BloombergReader/View/App.xaml
+++ b/BloombergReader/View/App.xaml
@@ -1,8 +1,10 @@
 ﻿<Application x:Class="BloombergReader.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:local="clr-namespace:BloombergReader.ViewModel"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <local:ProductViewModel x:Key="ProductViewModel" />
     </Application.Resources>
 </Application>
+    
