--- a/BloombergReader/View/App.xaml
+++ b/BloombergReader/View/App.xaml
@@ -4,7 +4,7 @@
              xmlns:local="clr-namespace:BloombergReader.ViewModel"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-        <local:ProductViewModel x:Key="ProductViewModel" />
+        <local:BarViewModel x:Key="BarViewModel" />
     </Application.Resources>
 </Application>
     
