--- a/BloombergReader/View/App.xaml
+++ b/BloombergReader/View/App.xaml
@@ -1,10 +1,16 @@
 ﻿<Application x:Class="BloombergReader.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:clr="clr-namespace:System;assembly=mscorlib"
              xmlns:local="clr-namespace:BloombergReader.ViewModel"
              StartupUri="MainWindow.xaml">
-    <Application.Resources>
+    <Application.Resources>        
         <local:BarViewModel x:Key="BarViewModel" />
+        
+         <!-- Images -->
+        <Image x:Key="NewFile" Source="/ApplicationResources/Images/NewFile.ico" />
+        <Image x:Key="OpenFile" Source="/ApplicationResources/Images/OpenFile.ico" />
+        <Image x:Key="SaveFile" Source="/ApplicationResources/Images/SaveFile.ico" />
     </Application.Resources>
 </Application>
     
