--- a/BloombergReader/View/App.xaml
+++ b/BloombergReader/View/App.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:clr="clr-namespace:System;assembly=mscorlib"
              xmlns:local="clr-namespace:BloombergReader.ViewModel"
-             StartupUri="MainWindow.xaml">
+             StartupUri="MainWindowView.xaml">
     <Application.Resources>        
         <local:BarViewModel x:Key="BarViewModel" />
         
