--- a/BloombergReader/View/MainWindowView.xaml
+++ b/BloombergReader/View/MainWindowView.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:local="clr-namespace:BloombergReader.ViewModel"
-        xmlns:bloombergReader="clr-namespace:BloombergReader"
+        xmlns:bloombergReader="clr-namespace:BloombergReader.View"
         Title="MainWindow"
         WindowState="Maximized">
     <Window.DataContext>
