--- a/BloombergReaderWeb/Views/Shared/_Layout.cshtml
+++ b/BloombergReaderWeb/Views/Shared/_Layout.cshtml
@@ -17,11 +17,22 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
+                @if (@User.Identity.IsAuthenticated)
+                {
+                    @Html.ActionLink("Hello " + @User.Identity.Name + "!", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                }
+                else
+                {
+                    @Html.ActionLink("Login", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                }
                 @Html.ActionLink("BloombergReaderWeb", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <li>
+                    <a href="@Url.Action("Logout", "Auth")"></a>Logout</a>;
+                </li>
+            </ul>
             </div>
         </div>
     </div>
