Added a lib that emulates BloombergAPI

--- a/BloombergReaderWeb/Views/Home/Index.cshtml
+++ b/BloombergReaderWeb/Views/Home/Index.cshtml
@@ -3,9 +3,9 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
-<p id="idTest"><p>
+<p>Here it suppose to show some really cool data...</p>
+
 <script>
-    document.getElementById("idTest").innerHTML = "Tkach Andrii test";
+    
 </script>
 
