--- a/BloombergReaderWeb/Views/Shared/_Layout.cshtml
+++ b/BloombergReaderWeb/Views/Shared/_Layout.cshtml
@@ -35,7 +35,7 @@
        
     <ul>
         <li><a href="~/Home/Index">Home</a></li>
-        <li><a href="#page1">Page1</a></li>
+        <li><a href="~/IntradayBarTable/Index">IntradayBarTable</a></li>
         <li><a href="~/About/Index">About</a></li>
     </ul>
     @RenderBody()
