Initial design. Bootstrap introduced.

--- a/BloombergReaderWeb/Views/Home/Index.cshtml
+++ b/BloombergReaderWeb/Views/Home/Index.cshtml
@@ -1,11 +1,7 @@
-﻿
-@{
-    ViewBag.Title = "Index";
+﻿@{
+    ViewBag.Title = "Home";
 }
 
-<p>Here it suppose to show some really cool data...</p>
-
-<script>
-    
-</script>
-
+<div class="container">
+    <p>Welcome to BloombergReaderWeb website.</p>
+</div>
