--- a/BloombergReaderWeb/Views/About/Index.cshtml
+++ b/BloombergReaderWeb/Views/About/Index.cshtml
@@ -1,7 +1,8 @@
-﻿
-@{
+﻿@{
     ViewBag.Title = "About";
 }
-<p>BloombergReaderWeb is a website created by me to play with different web technologies.</p>
-<p>Underneath it uses Bloomberg API Emulator to query data from "Bloomberg".</p>
+<div class="container text-left">
+    <p>BloombergReaderWeb is a website created by me to play with different web technologies.</p>
+    <p>Underneath it uses Bloomberg API Emulator to emulate data from Bloomberg.</p>
+</div>
 
