--- a/BloombergReaderWeb/Views/Shared/_Layout.cshtml
+++ b/BloombergReaderWeb/Views/Shared/_Layout.cshtml
@@ -20,10 +20,11 @@
         #header li a:hover {
             background-color: #DEAB63;
         }
+        
     </style>
 </head>
 <body>
-    <div class="navbar navbar-fixed-top" id="header">
+    <div class="navbar  default" id="header">
         <div class="container">
             <ul class="nav navbar-nav">
                 <li class="active">@Html.ActionLink("Home", "Index", "Home")</li>
@@ -35,7 +36,7 @@
     
     <div class="container body-content text-left">
         <h1>@ViewBag.Title</h1>    
-        @RenderBody()
+        @RenderBody()    
     </div>
 
     <div class="container navbar navbar-inner navbar-fixed-bottom">
