--- a/BloombergReaderWeb/Views/Shared/_Layout.cshtml
+++ b/BloombergReaderWeb/Views/Shared/_Layout.cshtml
@@ -4,9 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>@ViewBag.Title - BloombergReaderWeb</title>
-
+    
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
-    <link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
 
     <style>
         #header {
@@ -20,23 +19,21 @@
         #header li a:hover {
             background-color: #DEAB63;
         }
-        
+
     </style>
 </head>
 <body>
-    <div class="navbar  default" id="header">
-        <div class="container">
-            <ul class="nav navbar-nav">
-                <li class="active">@Html.ActionLink("Home", "Index", "Home")</li>
-                <li>@Html.ActionLink("IntradayBarTable", "Index", "IntradayBarTable")</li>
-                <li>@Html.ActionLink("About", "About", "Home")</li>
-            </ul>
-        </div>
+    <div class="container navbar navbar-static-top" id="header">
+        <ul  class="nav navbar-nav">
+            <li>@Html.ActionLink("Home", "Index", "Home")</li>
+            <li>@Html.ActionLink("IntradayBarTable", "Index", "IntradayBarTable")</li>
+            <li>@Html.ActionLink("About", "About", "Home")</li>
+        </ul>
     </div>
-    
+
     <div class="container body-content text-left">
-        <h1>@ViewBag.Title</h1>    
-        @RenderBody()    
+        <h2>@ViewBag.Title</h2>
+        @RenderBody()
     </div>
 
     <div class="container navbar navbar-inner navbar-fixed-bottom">
@@ -45,6 +42,6 @@
             <p class="text-center">Copyright © 2016 Andrii Tkach. Some Rights Reserved :)</p>
         </footer>
     </div>
-    
+
 </body>
 </html>
