Added News page

--- a/BloombergReader.Web/Views/Shared/_Layout.cshtml
+++ b/BloombergReader.Web/Views/Shared/_Layout.cshtml
@@ -26,7 +26,8 @@
     <div class="container navbar navbar-static-top" id="header">
         <ul  class="nav navbar-nav">
             <li>@Html.ActionLink("Home", "Index", "Home")</li>
-            <li>@Html.ActionLink("IntradayBarTable", "Index", "IntradayBarTable")</li>
+            <li>@Html.ActionLink("IntradayBarTable", "IntradayBarTable", "IntradayBarTable")</li>
+            <li>@Html.ActionLink("News", "ReadNews", "News")</li>
             <li>@Html.ActionLink("About", "About", "Home")</li>
         </ul>
     </div>
