Applied some bootstrap features

--- a/BloombergReader.Web/Views/Home/Index.cshtml
+++ b/BloombergReader.Web/Views/Home/Index.cshtml
@@ -2,5 +2,9 @@
     ViewBag.Title = "Home";
 }
 
-
 <p>Welcome to BloombergReader website.</p>
+<div class="row">
+    <div class="col-md-6 col-md-offset-3">
+        <img src="../images/Home.jpg" alt="Home" class="img-responsive" id="home">
+    </div>
+</div>
