--- a/BloombergReader.Web/Views/Shared/_Layout.cshtml
+++ b/BloombergReader.Web/Views/Shared/_Layout.cshtml
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>@ViewBag.Title - BloombergReader</title>
     
-    <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
+    <link href="~/Content/bootstrap.css" rel="stylesheet" type="text/css" />
+    <link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
 
     <style>
         #header {
@@ -20,6 +21,13 @@
             background-color: #DEAB63;
         }
 
+        #footer {
+            position: absolute;
+            bottom: 0;
+            width: 100%;
+            /* Set the fixed height of the footer here */
+            background-color: #f5f5f5;
+        }
     </style>
 </head>
 <body>
@@ -36,13 +44,12 @@
         <h2>@ViewBag.Title</h2>
         @RenderBody()
     </div>
-
-    <div class="container navbar navbar-inner navbar-fixed-bottom">
-        <hr />
-        <footer>
+    
+    <footer id="footer">
+        <div class="container">
             <p class="text-center">Copyright © 2016 Andrii Tkach. Some Rights Reserved :)</p>
-        </footer>
-    </div>
+        </div>
+    </footer>
 
 </body>
 </html>
