--- a/BloombergReader.Web/Views/IntradayBarTable/IntradayBarTable.cshtml
+++ b/BloombergReader.Web/Views/IntradayBarTable/IntradayBarTable.cshtml
@@ -3,7 +3,16 @@
     ViewBag.Title = "IntradayBar table";
 }
 
-<table class="table table-bordered table-striped">
+<style>
+    .table-hover tbody tr:hover,
+    .table-hover tbody tr:hover td,
+    .table-hover tbody tr:hover th {
+        background: #22313F !important;
+        color: #fff !important;
+    }
+</style>
+
+<table class="table table-bordered table-striped table-hover">
     <thead>
     <tr>
         <th style="text-align: center;">Date</th>
