Added a link to Bloomberg

--- a/BloombergReader.Web/Views/Home/About.cshtml
+++ b/BloombergReader.Web/Views/Home/About.cshtml
@@ -2,6 +2,5 @@
     ViewBag.Title = "About";
 }
 
-<p>BloombergReader is a first website created by me to play with different web technologies.</p>
-<p>Underneath it uses Bloomberg API Emulator to emulate data from Bloomberg.</p>
-<p>I know, it looks quite ugly :( I didn't try to make it perfect and didn't pay enough attention to many things, just wanted to do a "real app" using ASP.NET MVC.</p>
+<p>BloombergReader is a website created by me to play with different web technologies.</p>
+<p>Underneath it uses Bloomberg API Emulator to emulate data from <a target="_blank" href="https://www.bloomberg.com">Bloomberg</a>.</p>
