--- a/BloombergReader.Web/Views/Shared/_Layout.cshtml
+++ b/BloombergReader.Web/Views/Shared/_Layout.cshtml
@@ -8,6 +8,9 @@
     <link href="~/Content/bootstrap.css" rel="stylesheet" type="text/css" />
     <link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
 
+    <script src="~/Scripts/jquery-3.1.1.js"></script>
+    <script src="~/Scripts/jQueryRotate-2.3.js"></script>
+
     <style>
         #header {
             background-color: #2A2CBF;
@@ -51,5 +54,6 @@
         </div>
     </footer>
 
+    
 </body>
 </html>
