moved everything into single bootstrap container

--- a/BloombergReader.Web/Views/Shared/_Layout.cshtml
+++ b/BloombergReader.Web/Views/Shared/_Layout.cshtml
@@ -34,26 +34,24 @@
     </style>
 </head>
 <body>
-    <div class="container navbar navbar-static-top" id="header">
-        <ul  class="nav navbar-nav">
-            <li>@Html.ActionLink("Home", "Index", "Home")</li>
-            <li>@Html.ActionLink("IntradayBarTable", "IntradayBarTable", "IntradayBarTable")</li>
-            <li>@Html.ActionLink("News", "ReadNews", "News")</li>
-            <li>@Html.ActionLink("About", "About", "Home")</li>
-        </ul>
-    </div>
-
-    <div class="container body-content text-left">
-        <h2>@ViewBag.Title</h2>
-        @RenderBody()
-    </div>
-    
-    <footer id="footer">
-        <div class="container">
-            <p class="text-center">Copyright © 2016 Andrii Tkach. Some Rights Reserved :)</p>
+    <div class="container">
+        <div class="navbar navbar-static-top" id="header">
+            <ul class="nav navbar-nav">
+                <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                <li>@Html.ActionLink("IntradayBarTable", "IntradayBarTable", "IntradayBarTable")</li>
+                <li>@Html.ActionLink("News", "ReadNews", "News")</li>
+                <li>@Html.ActionLink("About", "About", "Home")</li>
+            </ul>
         </div>
-    </footer>
 
-    
+        <div class="body-content text-left">
+            <h2>@ViewBag.Title</h2>
+            @RenderBody()
+        </div>
+
+        <footer id="footer">
+            <p class="text-center">Copyright &copy 2016 Andrii Tkach. Some Rights Reserved :)</p>
+        </footer>
+    </div>
 </body>
 </html>
