Added AntiForgery token

--- a/BloombergReader.Web/Views/IntradayBarTable/IntradayBarTable.cshtml
+++ b/BloombergReader.Web/Views/IntradayBarTable/IntradayBarTable.cshtml
@@ -12,30 +12,32 @@
     }
 </style>
 
-<table class="table table-bordered table-striped table-hover">
-    <thead>
-    <tr>
-        <th style="text-align: center;">Date</th>
-        <th style="text-align: center;">Open</th>
-        <th style="text-align: center;">Close</th>
-        <th style="text-align: center;">High</th>
-        <th style="text-align: center;">Low</th>
-        <th style="text-align: center;">Volume</th>
-    </tr>
-    </thead>
-    <tbody>
-    @foreach (var item in Model)
-    {
-        <tr>
-            <td style="text-align: center;">@Html.DisplayFor(modelItem => item.Date)</td>
-            <td style="text-align: center;">@Html.DisplayFor(modelItem => item.Open)</td>
-            <td style="text-align: center;">@Html.DisplayFor(modelItem => item.Close)</td>
-            <td style="text-align: center;">@Html.DisplayFor(modelItem => item.High)</td>
-            <td style="text-align: center;">@Html.DisplayFor(modelItem => item.Low)</td>
-            <td style="text-align: center;">@Html.DisplayFor(modelItem => item.Volume)</td>
+<p>Move a mouse over the table.</p>
 
-        </tr>
-    }
-    </tbody>
-</table>
+    <table class="table table-bordered table-striped table-hover">
+        <thead>
+            <tr>
+                <th style="text-align: center;">Date</th>
+                <th style="text-align: center;">Open</th>
+                <th style="text-align: center;">Close</th>
+                <th style="text-align: center;">High</th>
+                <th style="text-align: center;">Low</th>
+                <th style="text-align: center;">Volume</th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td style="text-align: center;">@Html.DisplayFor(modelItem => item.Date)</td>
+                    <td style="text-align: center;">@Html.DisplayFor(modelItem => item.Open)</td>
+                    <td style="text-align: center;">@Html.DisplayFor(modelItem => item.Close)</td>
+                    <td style="text-align: center;">@Html.DisplayFor(modelItem => item.High)</td>
+                    <td style="text-align: center;">@Html.DisplayFor(modelItem => item.Low)</td>
+                    <td style="text-align: center;">@Html.DisplayFor(modelItem => item.Volume)</td>
+
+                </tr>
+            }
+        </tbody>
+    </table>
 
