--- a/BloombergReader.Web/Views/Home/Index.cshtml
+++ b/BloombergReader.Web/Views/Home/Index.cshtml
@@ -9,7 +9,7 @@
 
 <div class="row">
     <div class="col-md-6 col-md-offset-3">
-        <img src="../images/Home.jpg" alt="Home" class="img-responsive" id="home">
+        <img src=@Url.Content("~/Images/Home/Home.jpg") alt="Home" class="img-responsive" id="home">
     </div>
 </div>
 
