--- a/BloombergReader.Web/Views/Shared/_Layout.cshtml
+++ b/BloombergReader.Web/Views/Shared/_Layout.cshtml
@@ -7,31 +7,11 @@
     
     <link href="~/Content/bootstrap.css" rel="stylesheet" type="text/css" />
     <link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
+    <link href="~/Content/Layout.css" rel="stylesheet" type="text/css" />    
+    @RenderSection("ImageGallery", false)
 
     <script src="~/Scripts/jquery-3.1.1.js"></script>
     <script src="~/Scripts/jQueryRotate-2.3.js"></script>
-
-    <style>
-        #header {
-            background-color: #2A2CBF;
-        }
-        
-        #header li a {
-            color: white;
-        }
-        
-        #header li a:hover {
-            background-color: #DEAB63;
-        }
-
-        #footer {
-            position: absolute;
-            bottom: 0;
-            width: 100%;
-            /* Set the fixed height of the footer here */
-            background-color: #f5f5f5;
-        }
-    </style>
 </head>
 <body>
     <div class="container">
@@ -40,6 +20,7 @@
                 <li>@Html.ActionLink("Home", "Index", "Home")</li>
                 <li>@Html.ActionLink("IntradayBarTable", "IntradayBarTable", "IntradayBarTable")</li>
                 <li>@Html.ActionLink("News", "ReadNews", "News")</li>
+                <li>@Html.ActionLink("Gallery", "Gallery", "Gallery")</li>
                 <li>@Html.ActionLink("About", "About", "Home")</li>
             </ul>
         </div>
