Added the simplest Angular page

--- a/BloombergReader.Web/Views/News/ReadNews.cshtml
+++ b/BloombergReader.Web/Views/News/ReadNews.cshtml
@@ -3,6 +3,7 @@
     ViewBag.Title = "News";
 }    
 
+<!-- TODO: Refactor to Razor Html.BeginForm-->
 <div class="row">
     <div class="form col-md-3">
         <form method="POST">
