--- a/BloombergReader.Web/Views/Shared/_Layout.cshtml
+++ b/BloombergReader.Web/Views/Shared/_Layout.cshtml
@@ -12,6 +12,8 @@
 
     <script src="~/Scripts/jquery-3.1.1.js"></script>
     <script src="~/Scripts/jQueryRotate-2.3.js"></script>
+    <script src="~/Scripts/angular.min.js"></script>
+
 </head>
 <body>
     <div class="container">
@@ -21,6 +23,7 @@
                 <li>@Html.ActionLink("IntradayBarTable", "IntradayBarTable", "IntradayBarTable")</li>
                 <li>@Html.ActionLink("News", "ReadNews", "News")</li>
                 <li>@Html.ActionLink("Gallery", "Gallery", "Gallery")</li>
+                <li>@Html.ActionLink("Angular", "Angular", "Angular")</li>
                 <li>@Html.ActionLink("About", "About", "Home")</li>
             </ul>
         </div>
